examples/pos/unbox_boxed_lambda.effekt
module unbox_boxed_lambda

def main() = {
  def callback = unbox box { (x: String) => println(x) }
  callback("Hello, world!")
}