examples/neg/issue1165a.effekt
module issue1165a

def toString(): String = ""
def main() = {
  println(toString)
}